--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=mcp-demo
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:urlshortener
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# H2 Console Configuration (for development)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Logging Configuration
+logging.level.com.griotold.mcp_demo=INFO
+
